[package]
name = "game_site_be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.13", features = ["ws", "headers", "macros"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
tokio = { version = "1.0", features = ["full"] }
headers = "0.3"
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
eyre = "0.6.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.83"
futures = "0.3"